--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "author": "Isabel, Jorge",
   "license": "Unlicense",
   "dependencies": {
-    "node-telegram-bot-api": "^0.30.0"
+    "node-telegram-bot-api": "^0.30.0",
+    "save": "^2.3.2",
+    "sequelize": "^4.37.5",
+    "sqlite3": "^4.0.0"
   }
 }
